hw-detect (1.72) UNRELEASED; urgency=low

  [ Colin Watson ]
  * 'dmraid -c -s' changed its output format in 1.0.0.rc15; cope with both
    old and new (merged from Ubuntu).

  [ Frans Pop ]
  * Install usbutils based on presence of /sys/bus/usb.

 -- Frans Pop <fjp@debian.org>  Fri, 26 Dec 2008 15:33:04 +0100

hw-detect (1.71) unstable; urgency=low

  * Pass all_generic_ide as a plain boot option instead of with the value 1 as
    initramfs-tools ignores it otherwise. Whether or not initramfs-tools'
    behavior is correct is debatable.

 -- Frans Pop <fjp@debian.org>  Wed, 17 Dec 2008 20:54:19 +0100

hw-detect (1.70) unstable; urgency=low

  [ Frans Pop ]
  * The partman-dmraid component is no longer needed for Serial ATA RAID
    (dmraid) installations.

  [ Updated translations ]
  * Bengali (bn.po) by Mahay Alam Khan (মাহে আলম খান)
  * Bosnian (bs.po) by Armin Besirovic
  * Danish (da.po)
  * Esperanto (eo.po) by Felipe Castro
  * Latvian (lv.po) by Aigars Mahinovs
  * Macedonian (mk.po) by Arangel Angov
  * Slovenian (sl.po) by Vanja Cvelbar
  * Albanian (sq.po) by Elian Myftiu
  * Serbian (sr.po) by Veselin Mijušković
  * Ukrainian (uk.po) by Borys Yanovych

 -- Otavio Salvador <otavio@debian.org>  Sun, 21 Sep 2008 21:57:19 -0300

hw-detect (1.68) unstable; urgency=low

  [ Joey Hess ]
  * Fix libc6-i686 queuing on smp. Closes: #497863

  [ Jérémy Bobbio ]
  * check-missing-firmware: Don't ask for firmware files that have already
    been denied by the user in a previous question. Closes: #497395

  [ Updated translations ]
  * Catalan (ca.po) by Jordi Mallach
  * Spanish (es.po) by Javier Fernández-Sanguino Peña
  * Hebrew (he.po) by Omer Zak
  * Hungarian (hu.po) by SZERVÁC Attila
  * Indonesian (id.po) by Arief S Fitrianto
  * Georgian (ka.po) by Aiet Kolkhi
  * Central Khmer (km.po) by KHOEM Sokhem
  * Kurdish (ku.po) by Erdal Ronahi
  * Nepali (ne.po) by Shiva Prasad Pokharel
  * Norwegian Nynorsk (nn.po) by Håvard Korsvoll